[project]
name = "spotify-music-recommender"
version = "0.0.0"
description = "A personalized music recommendation system using the Spotify dataset."
readme = "README.md"
dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.1",
    "kagglehub==0.1.4",
    "kaggle==1.7.4.2"
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
    "black==22.10.0",
    "mypy==0.991",
    "pre-commit==2.20.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN101",   # Missing type annotation for `self`
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in `*arg` `**kwargs`
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D104",     # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/**" = ["D", "ARG002", "ARG003", "ANN002", "ANN003", "S101", "E501"]
"**/{config}/**" = ["ALL"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = """
    --cov-fail-under=70
    --cov=spotify-music-recommender
    --cov-report=term
    --cov-report=xml:.test-results/coverage.xml
    --junitxml=.test-results/pytest.xml
"""
env_files = ["tests/.test.env"]
filterwarnings = ["ignore::DeprecationWarning:"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spotify_music_recommender*"]
